--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Thoughts on Chips</h1>
     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, tenetur?</h4>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, totam ea dicta necessitatibus tempora quos esse et, fugit numquam itaque aliquam beatae iure illo atque!</p>
+    <footer class="text-center">&copy 2018, ThoughtsOnChips</footer>
     <script src="scripts/main.js"></script>
 </body>
 </html>
