--- a/src/index.html
+++ b/src/index.html
@@ -12,52 +12,70 @@
 </head>
 
 <body>
-        <header>
-                <h1 class="header text-center">Thoughts on Chips</h1>
-            </header>
-    <nav id="main">
+
+        <div class="hero-image">
+                <div class="hero-text">
+                  <h1>Thoughts on Chips</h1>
+                  <p>We eat chips. We review chips.</p>
+                </div>
+              </div>
+
+    <nav class="nav" id="main">
         <ul>
-            <li>About</li>
-            <li>Contact</li>
-            <li>Archive</li>
-            <li>Misc.</li>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+            <li>
+                <a href="#">Archive</a>
+            </li>
+            <li>
+                <a href="#">Misc.</a>
+            </li>
         </ul>
     </nav>
-    <div class="blue-area">
-        <div id="txt-area">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus architecto eligendi aspernatur velit. Repudiandae
-                facere dolores mollitia odit minima delectus aliquam tempore minus! Suscipit perferendis quas eius vero deserunt
-                placeat adipisci, molestias ipsum neque atque nulla, optio quae. Velit accusamus commodi corporis nostrum
-                dicta doloremque, quis architecto officiis odit, minima incidunt repellendus dignissimos dolores earum tempore
-                tenetur ut suscipit quos iure? Atque architecto consequatur ea similique amet. Eos fugit odio voluptas ullam.
-                Fuga, velit fugit!</p>
+    <div class="container"> 
+        <div class="blue-area">
+            <div id="txt-area">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus architecto eligendi aspernatur velit.
+                    Repudiandae facere dolores mollitia odit minima delectus aliquam tempore minus! Suscipit perferendis
+                    quas eius vero deserunt placeat adipisci, molestias ipsum neque atque nulla, optio quae. Velit accusamus
+                    commodi corporis nostrum dicta doloremque, quis architecto officiis odit, minima incidunt repellendus
+                    dignissimos dolores earum tempore tenetur ut suscipit quos iure? Atque architecto consequatur ea similique
+                    amet. Eos fugit odio voluptas ullam. Fuga, velit fugit!</p>
+            </div>
+            <div id="txt-area">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis amet velit earum hic cum molestias tempora
+                    deserunt. Ad quia quam cumque accusamus non nesciunt quis corporis sapiente ipsa labore. Quo magni reiciendis
+                    obcaecati consequuntur unde quas, libero quae eius possimus officiis error dolorum laboriosam, maxime
+                    laudantium illum molestias alias cumque! Repellat esse nobis est corporis, aperiam exercitationem doloribus
+                    officia nemo? Quam animi quod repudiandae ullam totam provident odio minima. Officiis dolorum sequi accusamus
+                    delectus perspiciatis inventore laboriosam, doloribus saepe maxime dicta commodi necessitatibus enim
+                    nemo iure velit sapiente, hic blanditiis, quos provident laudantium ullam itaque ex magni dolor. Dolorem,
+                    ipsam!
+                </p>
+            </div>
+            <div id="txt-area">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nam dolorem excepturi cumque. Quidem
+                    numquam esse id cumque illo veritatis nemo obcaecati veniam dolor excepturi doloribus nesciunt officia
+                    reiciendis sapiente minus asperiores ullam at, similique, earum consequatur. Veniam eos, facere iusto
+                    veritatis dicta suscipit, placeat obcaecati laborum voluptatum provident rerum soluta quia, id dolores
+                    perferendis. Atque provident perferendis tenetur excepturi magni aspernatur, maiores alias vero, assumenda
+                    autem velit, doloremque minus! Labore, veniam, sapiente provident voluptatibus aspernatur quam ducimus
+                    facere molestias pariatur, in beatae soluta. Doloribus distinctio laboriosam dolorum rem ipsa maxime
+                    odio. Cupiditate consectetur possimus fuga exercitationem placeat aliquid doloremque corrupti neque expedita
+                    dolores quis enim, beatae reiciendis, quas molestiae suscipit? Commodi saepe officiis ab distinctio et
+                    provident ipsa ad, quae deleniti qui veniam, aspernatur officia? Iure mollitia qui voluptates repellendus
+                    quasi, minus aspernatur aliquam harum eos itaque quam illum error sed labore. Necessitatibus explicabo,
+                    deserunt quam dolorum illum sapiente cupiditate quasi ab possimus repellat tempora consequuntur vero
+                    quos totam nisi amet non facilis harum. Repellat nostrum odit tenetur veniam facere, earum esse nesciunt
+                    qui eum, nemo maiores suscipit voluptas, quos vero neque voluptates omnis porro velit nulla placeat illo.
+                    Nulla sed ipsa similique at incidunt facere tempore voluptas voluptatum!</p>
+            </div>
+            <footer class="text-center">&copy 2018, ThoughtsOnChips</footer>
         </div>
-        <div id="txt-area">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis amet velit earum hic cum molestias tempora
-                deserunt. Ad quia quam cumque accusamus non nesciunt quis corporis sapiente ipsa labore. Quo magni reiciendis
-                obcaecati consequuntur unde quas, libero quae eius possimus officiis error dolorum laboriosam, maxime laudantium
-                illum molestias alias cumque! Repellat esse nobis est corporis, aperiam exercitationem doloribus officia
-                nemo? Quam animi quod repudiandae ullam totam provident odio minima. Officiis dolorum sequi accusamus delectus
-                perspiciatis inventore laboriosam, doloribus saepe maxime dicta commodi necessitatibus enim nemo iure velit
-                sapiente, hic blanditiis, quos provident laudantium ullam itaque ex magni dolor. Dolorem, ipsam!</p>
-        </div>
-        <div id="txt-area">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nam dolorem excepturi cumque. Quidem numquam
-                esse id cumque illo veritatis nemo obcaecati veniam dolor excepturi doloribus nesciunt officia reiciendis
-                sapiente minus asperiores ullam at, similique, earum consequatur. Veniam eos, facere iusto veritatis dicta
-                suscipit, placeat obcaecati laborum voluptatum provident rerum soluta quia, id dolores perferendis. Atque
-                provident perferendis tenetur excepturi magni aspernatur, maiores alias vero, assumenda autem velit, doloremque
-                minus! Labore, veniam, sapiente provident voluptatibus aspernatur quam ducimus facere molestias pariatur,
-                in beatae soluta. Doloribus distinctio laboriosam dolorum rem ipsa maxime odio. Cupiditate consectetur possimus
-                fuga exercitationem placeat aliquid doloremque corrupti neque expedita dolores quis enim, beatae reiciendis,
-                quas molestiae suscipit? Commodi saepe officiis ab distinctio et provident ipsa ad, quae deleniti qui veniam,
-                aspernatur officia? Iure mollitia qui voluptates repellendus quasi, minus aspernatur aliquam harum eos itaque
-                quam illum error sed labore. Necessitatibus explicabo, deserunt quam dolorum illum sapiente cupiditate quasi
-                ab possimus repellat tempora consequuntur vero quos totam nisi amet non facilis harum. Repellat nostrum odit
-                tenetur veniam facere, earum esse nesciunt qui eum, nemo maiores suscipit voluptas, quos vero neque voluptates
-                omnis porro velit nulla placeat illo. Nulla sed ipsa similique at incidunt facere tempore voluptas voluptatum!</p>
-        </div>
-        <footer class="text-center">&copy 2018, ThoughtsOnChips</footer>
     </div>
     <script src="scripts/main.js"></script>
 </body>
