--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -29,10 +30,10 @@
                 <a href="#">Contact</a>
             </li>
             <li>
-                <a href="#">Archive</a>
+                <a href="#"><i class="icons fa fa-instagram" aria-hidden="true"></i></a>
             </li>
             <li>
-                <a href="#">Misc.</a>
+                <a href="#"><i class="icons fa fa-twitter" aria-hidden="true"></i></a>
             </li>
         </ul>
     </nav>
