--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-
+        <h1 class="title">Thoughts On Chips</h1>
         <div class="hero-image">
                 <div class="hero-text">
-                  <h1>Thoughts on Chips</h1>
+                <!-- <h1>Thoughts on Chips</h1> -->
                   <p>We eat chips. We review chips.</p>
                 </div>
               </div>
@@ -33,7 +33,7 @@
                 <a href="#"><i class="icons fa fa-instagram" aria-hidden="true"></i></a>
             </li>
             <li>
-                <a href="#"><i class="icons fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="#"><i class="iconsfa fa-twitter" aria-hidden="true"></i></a>
             </li>
         </ul>
     </nav>
