logo in nav appears on scroll

--- a/src/index.html
+++ b/src/index.html
@@ -23,21 +23,15 @@
 
     <nav class="nav" id="main">
         <ul>
-            <li>
-                <a href="#">About</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>
-            <li>
-                <a href="#"><i class="icons fa fa-instagram" aria-hidden="true"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="iconsfa fa-twitter" aria-hidden="true"></i></a>
+            <li class="logo"><a href="#">T.O.C.</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#"><i class="icons fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="icons fa fa-twitter" aria-hidden="true"></i></a>
             </li>
         </ul>
     </nav>
-    <div class="container"> 
+    <div class="container">
         <div class="blue-area">
             <div id="txt-area">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus architecto eligendi aspernatur velit.
