--- a/src/index.html
+++ b/src/index.html
@@ -13,22 +13,22 @@
 </head>
 
 <body>
-        <h1 class="title">Thoughts On Chips</h1>
+    <h1 class="title">Thoughts On Chips</h1>
+    <div class="line"></div>
         <div class="hero-image">
-                <div class="hero-text">
-                <!-- <h1>Thoughts on Chips</h1> -->
-                  <p>We eat chips. We review chips.</p>
-                </div>
-              </div>
-
+            <div class="hero-text">
+                <p>We eat chips.</p>
+                <p>Then we review chips.</p>
+            </div>
+        </div>
+    <div class="line"></div>
     <nav class="nav" id="main">
         <ul>
             <li class="logo"><a href="#">T.O.C.</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#"><i class="icons fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="icons fa fa-twitter" aria-hidden="true"></i></a>
-            </li>
+            <li><a href="#"><i class="icons fa fa-instagram mr-sm-2" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="icons fa fa-twitter" aria-hidden="true"></i></a></li>
         </ul>
     </nav>
     <div class="container">
@@ -69,9 +69,9 @@
                     qui eum, nemo maiores suscipit voluptas, quos vero neque voluptates omnis porro velit nulla placeat illo.
                     Nulla sed ipsa similique at incidunt facere tempore voluptas voluptatum!</p>
             </div>
-            <footer class="text-center">&copy 2018, ThoughtsOnChips</footer>
         </div>
     </div>
+    <footer class="text-center">&copy 2018, ThoughtsOnChips</footer>
     <script src="scripts/main.js"></script>
 </body>
 
