hero text faded in on load

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <div class="hero-image">
             <div class="hero-text">
                 <p>We eat chips.</p>
-                <p>Then we review chips.</p>
+                <p>We review chips.</p>
             </div>
         </div>
     <div class="line"></div>
