added easter egg code

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,8 @@
         </div>
     </div>
     <footer class="text-center">&copy 2018, ThoughtsOnChips</footer>
-    <script src="scripts/main.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
 </body>
 
 </html>
