adjusted hero spacing

--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,17 @@
 
 <body>
     <h1 class="title">Thoughts On Chips</h1>
-    <div class="line"></div>
-        <div class="hero-image">
-            <div class="hero-text">
-                <p>We eat chips.</p>
-                <p>We review chips.</p>
+        <div class="hero">
+            <div class="hero-image">
+                <div class="hero-text">
+                    <p>We eat chips.</p>
+                    <p>We review chips.</p>
+                </div>
             </div>
         </div>
-    <div class="line"></div>
     <nav class="nav" id="main">
         <ul>
-            <li class="logo"><a href="#">T.O.C.</a></li>
+            <li class="logo"><a href="#">Thoughts on Chips.</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#"><i class="icons fa fa-instagram mr-sm-2" aria-hidden="true"></i></a></li>
