--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,12 @@
                     dignissimos dolores earum tempore tenetur ut suscipit quos iure? Atque architecto consequatur ea similique
                     amet. Eos fugit odio voluptas ullam. Fuga, velit fugit!</p>
             </div>
+            <div id="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <p>We ❤️ Chips.</p>
+                </div>
+            </div>
             <div id="txt-area">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis amet velit earum hic cum molestias tempora
                     deserunt. Ad quia quam cumque accusamus non nesciunt quis corporis sapiente ipsa labore. Quo magni reiciendis
