--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
             <div id="modal">
                 <div class="modal-content">
                     <span class="close">&times;</span>
-                    <p>We ❤️ Chips.</p>
+                    <p id="modal-text">We ❤️ Chips.</p>
                 </div>
             </div>
             <div id="txt-area">
