--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
             <li class="logo"><a href="#">Thoughts on Chips.</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#"><i class="icons fa fa-instagram mr-sm-2" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="icons fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.instagram.com/thoughtsonchips/"><i class="icons fa fa-instagram mr-sm-2" aria-hidden="true"></i></a></li>
+            <li><a href="https://twitter.com/thoughtsonchips"><i class="icons fa fa-twitter" aria-hidden="true"></i></a></li>
         </ul>
     </nav>
     <div class="container">
