added mail href

--- a/src/contact.html
+++ b/src/contact.html
@@ -46,7 +46,7 @@
                         <textarea class="form-control" name="email-body" rows="5" placeholder="Let us know what's on your mind."></textarea>
                     </div>
                     <button class="btn btn-success">Send</button>
-                    <button class="btn btn-danger">Cancel</button>
+                    <a href="mailto:thoughtsonchips@gmail.com" class="btn btn-danger">Cancel</a>
                 </form>
             </div>
         </div>
