moved href to right btn

--- a/src/contact.html
+++ b/src/contact.html
@@ -45,8 +45,8 @@
                     <div class="form-group">
                         <textarea class="form-control" name="email-body" rows="5" placeholder="Let us know what's on your mind."></textarea>
                     </div>
-                    <button class="btn btn-success">Send</button>
-                    <a href="mailto:thoughtsonchips@gmail.com" class="btn btn-danger">Cancel</a>
+                    <a href="mailto:thoughtsonchips@gmail.com" class="btn btn-success">Send</a>
+                    <button id="clear-btn" class="btn btn-danger">Cancel</button>
                 </form>
             </div>
         </div>
