moved contact to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <ul>
             <li class="logo"><a href="#">Thoughts on Chips.</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li><a href="https://www.instagram.com/thoughtsonchips/"><i class="icons fa fa-instagram mr-sm-2" aria-hidden="true"></i></a></li>
             <li><a href="https://twitter.com/thoughtsonchips"><i class="icons fa fa-twitter" aria-hidden="true"></i></a></li>
         </ul>
@@ -61,22 +61,15 @@
                 </p>
             </div>
             <div id="txt-area">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur nam dolorem excepturi cumque. Quidem
-                    numquam esse id cumque illo veritatis nemo obcaecati veniam dolor excepturi doloribus nesciunt officia
-                    reiciendis sapiente minus asperiores ullam at, similique, earum consequatur. Veniam eos, facere iusto
-                    veritatis dicta suscipit, placeat obcaecati laborum voluptatum provident rerum soluta quia, id dolores
-                    perferendis. Atque provident perferendis tenetur excepturi magni aspernatur, maiores alias vero, assumenda
-                    autem velit, doloremque minus! Labore, veniam, sapiente provident voluptatibus aspernatur quam ducimus
-                    facere molestias pariatur, in beatae soluta. Doloribus distinctio laboriosam dolorum rem ipsa maxime
-                    odio. Cupiditate consectetur possimus fuga exercitationem placeat aliquid doloremque corrupti neque expedita
-                    dolores quis enim, beatae reiciendis, quas molestiae suscipit? Commodi saepe officiis ab distinctio et
-                    provident ipsa ad, quae deleniti qui veniam, aspernatur officia? Iure mollitia qui voluptates repellendus
-                    quasi, minus aspernatur aliquam harum eos itaque quam illum error sed labore. Necessitatibus explicabo,
-                    deserunt quam dolorum illum sapiente cupiditate quasi ab possimus repellat tempora consequuntur vero
-                    quos totam nisi amet non facilis harum. Repellat nostrum odit tenetur veniam facere, earum esse nesciunt
-                    qui eum, nemo maiores suscipit voluptas, quos vero neque voluptates omnis porro velit nulla placeat illo.
-                    Nulla sed ipsa similique at incidunt facere tempore voluptas voluptatum!</p>
-                    <img class="chip-aisle img-fluid rounded mx-auto d-block" src="images/chips-pile.jpg" alt="pile of chips">
+                <h2 id="contact" class="text-center">Contact us!</h2>
+                <form action="">
+                    <div class="form-group">
+                        <input class="form-control" type="text" placeholder="Name:">
+                        <input class="form-control"  type="text" placeholder="Email:">
+                        <textarea class="form-control"  name="" id="" cols="30" rows="3" placeholder="Compliments. Concerns. Let us know!"></textarea>
+                        <button class="btn btn-lg btn-primary">Send!</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
