moved some images around

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
     <div class="container">
         <div class="blue-area">
             <div id="txt-area">
+                <h2 class="text-center">Our Story...</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus architecto eligendi aspernatur velit.
                     Repudiandae facere dolores mollitia odit minima delectus aliquam tempore minus! Suscipit perferendis
                     quas eius vero deserunt placeat adipisci, molestias ipsum neque atque nulla, optio quae. Velit accusamus
@@ -66,9 +67,10 @@
                     <div class="form-group">
                         <input class="form-control" type="text" placeholder="Name:">
                         <input class="form-control"  type="text" placeholder="Email:">
-                        <textarea class="form-control"  name="" id="" cols="30" rows="3" placeholder="Compliments. Concerns. Let us know!"></textarea>
+                        <textarea class="form-control"  name="" id="" cols="30" rows="3" placeholder="Compliments? Concerns? Let us know!"></textarea>
                         <button class="btn btn-lg btn-primary">Send!</button>
                     </div>
+                    <img src="images/chips-pile.jpg" alt="pile of chips">
                 </form>
             </div>
         </div>
