--- a/src/index.html
+++ b/src/index.html
@@ -19,16 +19,18 @@
             <div class="hero-text">
                 <p>We eat chips.</p>
                 <p>We review chips.</p>
-                <ul>
-                    <li><a href="https://www.instagram.com/thoughtsonchips/"><i class="icons fa fa-instagram mr-sm-2" aria-hidden="true"></i></a></li>
-                    <li><a href="https://twitter.com/thoughtsonchips"><i class="icons fa fa-twitter" aria-hidden="true"></i></a></li>
-                </ul>
             </div>
         </div>
     </div>
     <nav class="nav" id="main">
         <ul>
             <li class="logo"><a href="#">Thoughts on Chips.</a></li>
+            <div class="icons">
+                    <ul>
+                        <li><a href="https://www.instagram.com/thoughtsonchips/"><i class="icons fa fa-instagram mr-sm-2" aria-hidden="true"></i></a></li>
+                        <li><a href="https://twitter.com/thoughtsonchips"><i class="icons fa fa-twitter" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
             <li><a href="#">About</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
