--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     </nav>
     <div class="container">
         <div class="blue-area">
-            <div id="txt-area">
+            <div class="txt-area">
                 <h2 class="text-center">Our Story...</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus architecto eligendi aspernatur velit.
                     Repudiandae facere dolores mollitia odit minima delectus aliquam tempore minus! Suscipit perferendis
@@ -54,7 +54,8 @@
                     <p id="modal-text">We ❤️ Chips.</p>
                 </div>
             </div>
-            <div id="txt-area">
+            <div class="txt-area">
+                <h3 class="text-center">Our Criteria...</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis amet velit earum hic cum molestias tempora
                     deserunt. Ad quia quam cumque accusamus non nesciunt quis corporis sapiente ipsa labore. Quo magni reiciendis
                     obcaecati consequuntur unde quas, libero quae eius possimus officiis error dolorum laboriosam, maxime
@@ -65,8 +66,9 @@
                     ipsam!
                 </p>
             </div>
-            <div id="txt-area">
-                <h2 id="contact" class="text-center">Contact us!</h2>
+            <div id="contact"></div>
+            <div class="txt-area">
+                <h3 class="text-center">Contact us!</h3>
                 <form action="">
                     <div class="form-group">
                         <input class="form-control" type="text" placeholder="Name:">
@@ -75,10 +77,18 @@
                         <button class="btn btn-lg btn-primary">Send!</button>
                     </div>
                 </form>
+                <img src="images/chip3.jpg" alt="pile of chips">
             </div>
         </div>
     </div>
-    <footer class="text-center">&copy 2018, ThoughtsOnChips</footer>
+    <footer class="text-center">&copy 2018, ThoughtsOnChips
+        <div class="icons">
+            <ul>
+                <li><a href="https://www.instagram.com/thoughtsonchips/"><i class="icons fa fa-instagram mr-sm-2" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/thoughtsonchips"><i class="icons fa fa-twitter" aria-hidden="true"></i></a></li>
+            </ul>
+        </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
 </body>
 
