removed contact form

--- a/src/index.html
+++ b/src/index.html
@@ -69,13 +69,10 @@
             <div id="contact"></div>
             <div class="txt-area">
                 <h3 class="text-center">Contact us!</h3>
-                <form action="">
-                    <div class="form-group">
-                        <input class="form-control" type="text" placeholder="Name:">
-                        <input class="form-control"  type="text" placeholder="Email:">
-                        <textarea class="form-control"  name="" id="" cols="30" rows="3" placeholder="Compliments? Concerns? Let us know!"></textarea>
-                        <button class="btn btn-lg btn-primary">Send!</button>
-                    </div>
+                <!-- Ideally, this would be a form but that would require server side code and I don't know if I want to commit to that right now. -->
+                <p class="text-center">This is where the <a href="#">email</a> will be.</p>
+                <p>We'll put a bunch of ther stuff here, too, but for now just some more good old Lorem.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit expedita obcaecati dolorem libero deserunt ullam eos commodi numquam nostrum pariatur.</p>
                 </form>
                 <img src="images/chip3.jpg" alt="pile of chips">
             </div>
