--- a/src/index.html
+++ b/src/index.html
@@ -69,8 +69,15 @@
             <div id="contact"></div>
             <div class="txt-area">
                 <h3 class="text-center">Contact us!</h3>
-                <!-- Ideally, this would be a form but that would require server side code and I don't know if I want to commit to that right now. -->
                 <p class="text-center">This is where the <a href="#">email</a> will be.</p>
+                <div class="form-group">
+                    <form action="https://formspree.io/thoughtsonchips@gmail.com" method="POST">
+                        <input type="text" name="name" placeholder="Name:">
+                        <input type="email" name="_replyto" placeholder="Email:">
+                        <textarea name="text" id="" cols="30" rows="10"></textarea>
+                        <input type="submit" value="Send">
+                    </form>
+                </div>
                 <p>We'll put a bunch of ther stuff here, too, but for now just some more good old Lorem.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit expedita obcaecati dolorem libero deserunt ullam eos commodi numquam nostrum pariatur.</p>
                 </form>
